# Smart_class_assistant

./: Member 4 Face_Recognition  member 7_ Concepts Used
member 4_face_recognition/: CMakeLists.txt  package.xml
member 4_face_recognition/launch/: smart_classroom_member4.launch
member 4_face_recognition/scripts/: attendance_management_node.py  face_recognition_node.py
member1/launch/: README.md  smart_classroom.launch
member1/scripts/: classroom_manager_node.py  environment_monitor_node.py  light_controller_node.py  motion_detector_node.py
member2_automation/: CMakeLists.txt  package.xml
member2_automation/scripts/: mock_sensor_cli.py
member2_automation/src/: lighting_logic_node.cpp
member3_camera_vision/: CMakeLists.txt  package.xml
member3_camera_vision/scripts/: camera_vision_node.cpp  camera_vision_node.py
member3_camera_vision/tests/: test_camera_vision.py
member5/src/: package.xml  setup.cfg  setup.py
member5/src/classroom_automation/: audio_processing_node.py  servo_controller_node.py
member5/src/launch/: tracking_system.launch.py
member5/src/test/: test_tracking.py
member6_environment/: CMakeLists.txt  classroom_dashboard.rviz  environment_monitor_node.py  monitor_config.perspective  package.xml
