<?xml version="1.0"?>
<package format="2">
  <name>member4_face_recognition</name>
  <version>1.0.0</version>
  <description>ROS Noetic Face Recognition and Attendance System for Member 4</description>
  <maintainer email="student@classroom.edu">Member 4</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Package requirements necessary for build compilation -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Export dependencies for other workspace modules -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>

  <!-- System packages run dependencies at execution time -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
</package>