<?xml version="1.0"?>
<package format="2">
  <name>member3_camera_vision</name>
  <version>1.0.0</version>
  <description>ROS Noetic Camera Capture and Face Detection Pipeline Node</description>
  <maintainer estimate="Sardor Suyunov">Sardor</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
